Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -821,7 +821,7 @@
   "pli-tv-kd11:21.1.17": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:21.1.18": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd11:21.1.19": "He shouldn’t remind a regular monk of an offense. ",
-  "pli-tv-kd11:21.1.20": "He should not associate inappropriately with other monks.” ",
+  "pli-tv-kd11:21.1.20": "He shouldn’t associate inappropriately with other monks.” ",
   "pli-tv-kd11:21.1.21": "The eighteen kinds of conduct in regard to the legal procedure of reconciliation are finished. ",
   "pli-tv-kd11:22.1.1": "Soon afterwards the Sangha did a legal procedure of reconciliation against the monk Sudhamma, ",
   "pli-tv-kd11:22.1.2": "instructing him to ask Citta for forgiveness. ",
