--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -874,7 +874,7 @@
   "pli-tv-kd11:23.2.11": "The group of eighteen on not to be lifted is finished. ",
   "pli-tv-kd11:23.2.12.0": "4.6 The group of eighteen on to be lifted ",
   "pli-tv-kd11:23.2.12.1": "“When a monk has five qualities, a legal procedure of reconciliation against him should be lifted: ",
-  "pli-tv-kd11:23.2.13": "he does not give the full ordination; he does not give formal support; he does not have a novice monk attend on him; he does not accept being appointed as an instructor of the nuns; he does not instruct the nuns, whether appointed or not. ",
+  "pli-tv-kd11:23.2.13": "he doesn’t give the full ordination; he doesn’t give formal support; he doesn’t have a novice monk attend on him; he doesn’t accept being appointed as an instructor of the nuns; he doesn’t instruct the nuns, whether appointed or not. ",
   "pli-tv-kd11:23.2.15": "When a monk has another five qualities, a procedure of reconciliation against him should be lifted: ",
   "pli-tv-kd11:23.2.16": "he doesn’t commit the same offense for which the Sangha did the procedure of reconciliation against him; he doesn’t commit an offense similar to the one for which the Sangha did the procedure of reconciliation against him; he doesn’t commit an offense worse than the one for which the Sangha did the procedure of reconciliation against him; ",
   "pli-tv-kd11:23.2.17": "he doesn’t criticize the procedure; he doesn’t criticize those who did the procedure. ",
