--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1012,8 +1012,8 @@
   "pli-tv-kd11:27.1.7": "Even if appointed, he shouldn’t instruct the nuns. ",
   "pli-tv-kd11:27.1.8": "He shouldn’t commit the same offense as the offense for which the Sangha did the procedure of ejecting him for not recognizing an offense. ",
   "pli-tv-kd11:27.1.9": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of ejecting him for not recognizing an offense. ",
-  "pli-tv-kd11:27.1.10": "He should not commit an offense worse than the offense for which the Sangha did the procedure of ejecting him for not recognizing an offense. ",
-  "pli-tv-kd11:27.1.11": "He should not criticize the procedure. ",
+  "pli-tv-kd11:27.1.10": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of ejecting him for not recognizing an offense. ",
+  "pli-tv-kd11:27.1.11": "He shouldn’t criticize the procedure. ",
   "pli-tv-kd11:27.1.12": "He should not criticize those who did the procedure. ",
   "pli-tv-kd11:27.1.13": "He should not consent to a regular monk bowing down to him. ",
   "pli-tv-kd11:27.1.14": "He should not consent to a regular monk standing up for him. ",
