--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1014,9 +1014,9 @@
   "pli-tv-kd11:27.1.9": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of ejecting him for not recognizing an offense. ",
   "pli-tv-kd11:27.1.10": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of ejecting him for not recognizing an offense. ",
   "pli-tv-kd11:27.1.11": "He shouldn’t criticize the procedure. ",
-  "pli-tv-kd11:27.1.12": "He should not criticize those who did the procedure. ",
-  "pli-tv-kd11:27.1.13": "He should not consent to a regular monk bowing down to him. ",
-  "pli-tv-kd11:27.1.14": "He should not consent to a regular monk standing up for him. ",
+  "pli-tv-kd11:27.1.12": "He shouldn’t criticize those who did the procedure. ",
+  "pli-tv-kd11:27.1.13": "He shouldn’t consent to a regular monk bowing down to him. ",
+  "pli-tv-kd11:27.1.14": "He shouldn’t consent to a regular monk standing up for him. ",
   "pli-tv-kd11:27.1.15": "He should not consent to a regular monk raise his joined palms to him. ",
   "pli-tv-kd11:27.1.16": "He should not consent to a regular monk doing acts of respect toward him. ",
   "pli-tv-kd11:27.1.17": "He should not consent to a regular monk offering him a seat. ",
