--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1017,10 +1017,10 @@
   "pli-tv-kd11:27.1.12": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd11:27.1.13": "He shouldn’t consent to a regular monk bowing down to him. ",
   "pli-tv-kd11:27.1.14": "He shouldn’t consent to a regular monk standing up for him. ",
-  "pli-tv-kd11:27.1.15": "He should not consent to a regular monk raise his joined palms to him. ",
-  "pli-tv-kd11:27.1.16": "He should not consent to a regular monk doing acts of respect toward him. ",
-  "pli-tv-kd11:27.1.17": "He should not consent to a regular monk offering him a seat. ",
-  "pli-tv-kd11:27.1.18": "He should not consent to a regular monk offering him a bed. ",
+  "pli-tv-kd11:27.1.15": "He shouldn’t consent to a regular monk raise his joined palms to him. ",
+  "pli-tv-kd11:27.1.16": "He shouldn’t consent to a regular monk doing acts of respect toward him. ",
+  "pli-tv-kd11:27.1.17": "He shouldn’t consent to a regular monk offering him a seat. ",
+  "pli-tv-kd11:27.1.18": "He shouldn’t consent to a regular monk offering him a bed. ",
   "pli-tv-kd11:27.1.19": "He should not consent to a regular monk offering him water for washing his feet and a foot stool. ",
   "pli-tv-kd11:27.1.20": "He should not consent to a regular monk offering him a foot scraper. ",
   "pli-tv-kd11:27.1.21": "He should not consent to a regular monk receiving his bowl and robe. ",
