--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1021,10 +1021,10 @@
   "pli-tv-kd11:27.1.16": "He shouldn’t consent to a regular monk doing acts of respect toward him. ",
   "pli-tv-kd11:27.1.17": "He shouldn’t consent to a regular monk offering him a seat. ",
   "pli-tv-kd11:27.1.18": "He shouldn’t consent to a regular monk offering him a bed. ",
-  "pli-tv-kd11:27.1.19": "He should not consent to a regular monk offering him water for washing his feet and a foot stool. ",
-  "pli-tv-kd11:27.1.20": "He should not consent to a regular monk offering him a foot scraper. ",
-  "pli-tv-kd11:27.1.21": "He should not consent to a regular monk receiving his bowl and robe. ",
-  "pli-tv-kd11:27.1.22": "He should not consent to a regular monk massaging his back when bathing. ",
+  "pli-tv-kd11:27.1.19": "He shouldn’t consent to a regular monk offering him water for washing his feet and a foot stool. ",
+  "pli-tv-kd11:27.1.20": "He shouldn’t consent to a regular monk offering him a foot scraper. ",
+  "pli-tv-kd11:27.1.21": "He shouldn’t consent to a regular monk receiving his bowl and robe. ",
+  "pli-tv-kd11:27.1.22": "He shouldn’t consent to a regular monk massaging his back when bathing. ",
   "pli-tv-kd11:27.1.23": "He should not charge a regular monk with failure in morality. ",
   "pli-tv-kd11:27.1.24": "He should not charge a regular monk with failure in conduct. ",
   "pli-tv-kd11:27.1.25": "He should not charge a regular monk with failure in view. ",
