--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1025,7 +1025,7 @@
   "pli-tv-kd11:27.1.20": "He shouldn’t consent to a regular monk offering him a foot scraper. ",
   "pli-tv-kd11:27.1.21": "He shouldn’t consent to a regular monk receiving his bowl and robe. ",
   "pli-tv-kd11:27.1.22": "He shouldn’t consent to a regular monk massaging his back when bathing. ",
-  "pli-tv-kd11:27.1.23": "He should not charge a regular monk with failure in morality. ",
+  "pli-tv-kd11:27.1.23": "He shouldn’t charge a regular monk with failure in morality. ",
   "pli-tv-kd11:27.1.24": "He should not charge a regular monk with failure in conduct. ",
   "pli-tv-kd11:27.1.25": "He should not charge a regular monk with failure in view. ",
   "pli-tv-kd11:27.1.26": "He should not charge a regular monk with failure in livelihood. ",
