--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1026,8 +1026,8 @@
   "pli-tv-kd11:27.1.21": "He shouldn’t consent to a regular monk receiving his bowl and robe. ",
   "pli-tv-kd11:27.1.22": "He shouldn’t consent to a regular monk massaging his back when bathing. ",
   "pli-tv-kd11:27.1.23": "He shouldn’t charge a regular monk with failure in morality. ",
-  "pli-tv-kd11:27.1.24": "He should not charge a regular monk with failure in conduct. ",
-  "pli-tv-kd11:27.1.25": "He should not charge a regular monk with failure in view. ",
+  "pli-tv-kd11:27.1.24": "He shouldn’t charge a regular monk with failure in conduct. ",
+  "pli-tv-kd11:27.1.25": "He shouldn’t charge a regular monk with failure in view. ",
   "pli-tv-kd11:27.1.26": "He should not charge a regular monk with failure in livelihood. ",
   "pli-tv-kd11:27.1.27": "He should not cause division between monks. ",
   "pli-tv-kd11:27.1.28": "He should not wear lay clothes. ",
