Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1028,7 +1028,7 @@
   "pli-tv-kd11:27.1.23": "He shouldn’t charge a regular monk with failure in morality. ",
   "pli-tv-kd11:27.1.24": "He shouldn’t charge a regular monk with failure in conduct. ",
   "pli-tv-kd11:27.1.25": "He shouldn’t charge a regular monk with failure in view. ",
-  "pli-tv-kd11:27.1.26": "He should not charge a regular monk with failure in livelihood. ",
+  "pli-tv-kd11:27.1.26": "He shouldn’t charge a regular monk with failure in livelihood. ",
   "pli-tv-kd11:27.1.27": "He should not cause division between monks. ",
   "pli-tv-kd11:27.1.28": "He should not wear lay clothes. ",
   "pli-tv-kd11:27.1.29": "He should not wear the robes of the monastics of other religions. ",
