--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1035,7 +1035,7 @@
   "pli-tv-kd11:27.1.30": "He shouldn’t associate with the monastics of other religions. ",
   "pli-tv-kd11:27.1.31": "He should associate with monks. ",
   "pli-tv-kd11:27.1.32": "He should train in the monks’ training. ",
-  "pli-tv-kd11:27.1.33": "He should not stay in the same room in a monastery as a regular monk. ",
+  "pli-tv-kd11:27.1.33": "He shouldn’t stay in the same room in a monastery as a regular monk. ",
   "pli-tv-kd11:27.1.34": "He should not stay in the same room in a non-monastery as a regular monk. ",
   "pli-tv-kd11:27.1.35": "He should not stay in the same room in a monastery or a non-monastery as a regular monk. ",
   "pli-tv-kd11:27.1.36": "He should get up from his seat when he sees a regular monk. ",
