--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1036,10 +1036,10 @@
   "pli-tv-kd11:27.1.31": "He should associate with monks. ",
   "pli-tv-kd11:27.1.32": "He should train in the monks’ training. ",
   "pli-tv-kd11:27.1.33": "He shouldn’t stay in the same room in a monastery as a regular monk. ",
-  "pli-tv-kd11:27.1.34": "He should not stay in the same room in a non-monastery as a regular monk. ",
-  "pli-tv-kd11:27.1.35": "He should not stay in the same room in a monastery or a non-monastery as a regular monk. ",
+  "pli-tv-kd11:27.1.34": "He shouldn’t stay in the same room in a non-monastery as a regular monk. ",
+  "pli-tv-kd11:27.1.35": "He shouldn’t stay in the same room in a monastery or a non-monastery as a regular monk. ",
   "pli-tv-kd11:27.1.36": "He should get up from his seat when he sees a regular monk. ",
-  "pli-tv-kd11:27.1.37": "He should not dismiss a regular monk, whether inside or outside a dwelling. ",
+  "pli-tv-kd11:27.1.37": "He shouldn’t dismiss a regular monk, whether inside or outside a dwelling. ",
   "pli-tv-kd11:27.1.38": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:27.1.39": "He should not cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:27.1.40": "He should not speak to a regular monk to initiate a legal process against him. ",
