Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1044,8 +1044,8 @@
   "pli-tv-kd11:27.1.39": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:27.1.40": "He shouldn’t order a regular monk in regard to an offense. ",
   "pli-tv-kd11:27.1.41": "He shouldn’t give instructions to a regular monk from a position of authority. ",
-  "pli-tv-kd11:27.1.42": "He should not get permission from a regular monk to correct him. ",
-  "pli-tv-kd11:27.1.43": "He should not accuse a regular monk of an offense. ",
+  "pli-tv-kd11:27.1.42": "He shouldn’t get permission from a regular monk to correct him. ",
+  "pli-tv-kd11:27.1.43": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd11:27.1.44": "He should not remind a regular monk of an offense. ",
   "pli-tv-kd11:27.1.45": "He should not associate inappropriately with other monks.” ",
   "pli-tv-kd11:27.1.46": "The forty-three kinds of conduct in regard to the legal procedure of ejection for not recognizing an offense are finished. ",
