Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1046,7 +1046,7 @@
   "pli-tv-kd11:27.1.41": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:27.1.42": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:27.1.43": "He shouldn’t accuse a regular monk of an offense. ",
-  "pli-tv-kd11:27.1.44": "He should not remind a regular monk of an offense. ",
+  "pli-tv-kd11:27.1.44": "He shouldn’t remind a regular monk of an offense. ",
   "pli-tv-kd11:27.1.45": "He should not associate inappropriately with other monks.” ",
   "pli-tv-kd11:27.1.46": "The forty-three kinds of conduct in regard to the legal procedure of ejection for not recognizing an offense are finished. ",
   "pli-tv-kd11:28.1.1": "Soon afterwards the Sangha did a legal procedure of ejecting the monk Channa for not recognizing an offense, ",
