Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1064,7 +1064,7 @@
   "pli-tv-kd11:28.1.13": "The monks told the Buddha. He had the monks gathered and said, ",
   "pli-tv-kd11:28.1.14": "“Well then, lift that legal procedure of ejecting the monk Channa for not recognizing an offense. ",
   "pli-tv-kd11:28.2.0": "5.5 The group of forty-three on not to be lifted ",
-  "pli-tv-kd11:28.2.1": "“When a monk has five qualities, a legal procedure of ejecting him for not recognizing an offense should not be lifted: ",
+  "pli-tv-kd11:28.2.1": "“When a monk has five qualities, a legal procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.2": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
   "pli-tv-kd11:28.2.4": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense should not be lifted: ",
   "pli-tv-kd11:28.2.5": "he commits the same offense for which the Sangha did the procedure of ejecting him for not recognizing an offense; he commits an offense similar to the one for which the Sangha did the procedure of ejecting him for not recognizing an offense; he commits an offense worse than the one for which the Sangha did the procedure of ejecting him for not recognizing an offense; ",
