Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1066,10 +1066,10 @@
   "pli-tv-kd11:28.2.0": "5.5 The group of forty-three on not to be lifted ",
   "pli-tv-kd11:28.2.1": "“When a monk has five qualities, a legal procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.2": "he gives the full ordination; he gives formal support; he has a novice monk attend on him; he accepts being appointed as an instructor of the nuns; he instructs the nuns, whether appointed or not. ",
-  "pli-tv-kd11:28.2.4": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense should not be lifted: ",
+  "pli-tv-kd11:28.2.4": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.5": "he commits the same offense for which the Sangha did the procedure of ejecting him for not recognizing an offense; he commits an offense similar to the one for which the Sangha did the procedure of ejecting him for not recognizing an offense; he commits an offense worse than the one for which the Sangha did the procedure of ejecting him for not recognizing an offense; ",
   "pli-tv-kd11:28.2.6": "he criticizes the procedure; he criticizes those who did the procedure. ",
-  "pli-tv-kd11:28.2.8": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense should not be lifted: ",
+  "pli-tv-kd11:28.2.8": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.9": "he consents to a regular monk bowing down to him; he consents to a regular monk standing up for him; he consents to a regular monk raising his joined palms to him; he consents to a regular monk doing acts of respect toward him; he consents to a regular monk offering him a seat. ",
   "pli-tv-kd11:28.2.11": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense should not be lifted: ",
   "pli-tv-kd11:28.2.12": "he consents to a regular monk offering him a bed; he consents to a regular monk offering him water for washing his feet and a foot stool; he consents to a regular monk offering him a foot scraper; he consents to a regular monk receiving his bowl and robe; he consents to a regular monk massaging his back when bathing. ",
