--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1075,7 +1075,7 @@
   "pli-tv-kd11:28.2.12": "he consents to a regular monk offering him a bed; he consents to a regular monk offering him water for washing his feet and a foot stool; he consents to a regular monk offering him a foot scraper; he consents to a regular monk receiving his bowl and robe; he consents to a regular monk massaging his back when bathing. ",
   "pli-tv-kd11:28.2.14": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.15": "he charges a regular monk with failure in morality; he charges a regular monk with failure in conduct; he charges a regular monk with failure in view; he charges a regular monk with failure in livelihood; he causes division between monks. ",
-  "pli-tv-kd11:28.2.17": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense should not be lifted: ",
+  "pli-tv-kd11:28.2.17": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.18": "he wears lay clothes; he wears the robes of the monastics of other religions; he associates with the monastics of other religions; ",
   "pli-tv-kd11:28.2.19": "he doesn’t associate with monks; he doesn’t train in the monks’ training. ",
   "pli-tv-kd11:28.2.21": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense should not be lifted: ",
