Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1078,7 +1078,7 @@
   "pli-tv-kd11:28.2.17": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.18": "he wears lay clothes; he wears the robes of the monastics of other religions; he associates with the monastics of other religions; ",
   "pli-tv-kd11:28.2.19": "he doesn’t associate with monks; he doesn’t train in the monks’ training. ",
-  "pli-tv-kd11:28.2.21": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense should not be lifted: ",
+  "pli-tv-kd11:28.2.21": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense shouldn’t be lifted: ",
   "pli-tv-kd11:28.2.22": "he stays in the same room in a monastery as a regular monk; he stays in the same room in a non-monastery as a regular monk; he stays in the same room in a monastery or a non-monastery as a regular monk; ",
   "pli-tv-kd11:28.2.23": "he doesn’t get up from his seat when he sees a regular monk; ",
   "pli-tv-kd11:28.2.24": "he dismisses a regular monk, whether inside or outside a dwelling. ",
