--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1087,7 +1087,7 @@
   "pli-tv-kd11:28.2.29": "The group of forty-three on not to be lifted in regard to the legal procedure of ejection for not recognizing an offense is finished. ",
   "pli-tv-kd11:29.1.0": "5.6 The group of forty-three on to be lifted ",
   "pli-tv-kd11:29.1.1": "“When a monk has five qualities, a legal procedure of ejecting him for not recognizing an offense should be lifted: ",
-  "pli-tv-kd11:29.1.2": "he does not give the full ordination; he does not give formal support; he does not have a novice monk attend on him; he does not accept being appointed as an instructor of the nuns; he does not instruct the nuns, whether appointed or not. ",
+  "pli-tv-kd11:29.1.2": "he doesn’t give the full ordination; he doesn’t give formal support; he doesn’t have a novice monk attend on him; he doesn’t accept being appointed as an instructor of the nuns; he doesn’t instruct the nuns, whether appointed or not. ",
   "pli-tv-kd11:29.1.4": "When a monk has another five qualities, a procedure of ejecting him for not recognizing an offense should be lifted: ",
   "pli-tv-kd11:29.1.5": "he doesn’t commit the same offense for which the Sangha did the procedure of ejecting him for not recognizing an offense; he doesn’t commit an offense similar to the one for which the Sangha did the procedure of ejecting him for not recognizing an offense; he doesn’t commit an offense worse than the one for which the Sangha did the procedure of ejecting him for not recognizing an offense; ",
   "pli-tv-kd11:29.1.6": "he doesn’t criticize the procedure; he doesn’t criticize those who did the procedure. ",
