--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1176,9 +1176,9 @@
   "pli-tv-kd11:31.1.44": "that the Sangha has done a legal procedure of ejecting Channa for not making amends for an offense, ",
   "pli-tv-kd11:31.1.45": "prohibiting him from living with the Sangha. ",
   "pli-tv-kd11:31.1.46.0": "6.1 The group of twelve on illegitimate legal procedures ",
-  "pli-tv-kd11:31.1.46.1": "“When a legal procedure of ejection for not making amends for an offense has three qualities, it is illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:31.1.46.1": "“When a legal procedure of ejection for not making amends for an offense has three qualities, it’s illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:31.1.47": "it’s done in the absence of the accused, it’s done without questioning the accused, it’s done without the admission of the accused. ",
-  "pli-tv-kd11:31.1.49": "When a procedure of ejection for not making amends for an offense has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:31.1.49": "When a procedure of ejection for not making amends for an offense has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:31.1.50": "it’s done against one who hasn’t committed any offense, it’s done against one who’s committed an offense that isn’t clearable by confession, it’s done against one who’s confessed their offense. ",
   "pli-tv-kd11:31.1.51": "When a procedure of ejection for not making amends for an offense has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: it’s done without having accused the person of their offense, it’s done without having reminded the person of their offense, it’s done without having charged the person with their offense. ",
   "pli-tv-kd11:31.1.52": "“When a procedure of ejection for not making amends for an offense has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: it’s done in the absence of the accused, it’s done illegitimately, it’s done by an incomplete assembly. ",
