--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1229,7 +1229,7 @@
   "pli-tv-kd11:31.1.103.1": "“A monk who’s had a legal procedure of ejection for not making amends for an offense done against himself should conduct himself properly. ",
   "pli-tv-kd11:31.1.104": "This is the proper conduct: ",
   "pli-tv-kd11:31.1.105": "He shouldn’t give the full ordination. ",
-  "pli-tv-kd11:31.1.106": "He should not give formal support. ",
+  "pli-tv-kd11:31.1.106": "He shouldn’t give formal support. ",
   "pli-tv-kd11:31.1.107": "He should not have a novice monk attend on him. ",
   "pli-tv-kd11:31.1.108": "He should not accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:31.1.109": "Even if appointed, he should not instruct the nuns. ",
