Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1230,8 +1230,8 @@
   "pli-tv-kd11:31.1.104": "This is the proper conduct: ",
   "pli-tv-kd11:31.1.105": "He shouldn’t give the full ordination. ",
   "pli-tv-kd11:31.1.106": "He shouldn’t give formal support. ",
-  "pli-tv-kd11:31.1.107": "He should not have a novice monk attend on him. ",
-  "pli-tv-kd11:31.1.108": "He should not accept being appointed as an instructor of the nuns. ",
+  "pli-tv-kd11:31.1.107": "He shouldn’t have a novice monk attend on him. ",
+  "pli-tv-kd11:31.1.108": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:31.1.109": "Even if appointed, he should not instruct the nuns. ",
   "pli-tv-kd11:31.1.110": "He should not commit the same offense as the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
   "pli-tv-kd11:31.1.111": "He should not commit an offense similar to the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
