--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1234,8 +1234,8 @@
   "pli-tv-kd11:31.1.108": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:31.1.109": "Even if appointed, he shouldn’t instruct the nuns. ",
   "pli-tv-kd11:31.1.110": "He shouldn’t commit the same offense as the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
-  "pli-tv-kd11:31.1.111": "He should not commit an offense similar to the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
-  "pli-tv-kd11:31.1.112": "He should not commit an offense worse than the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
+  "pli-tv-kd11:31.1.111": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
+  "pli-tv-kd11:31.1.112": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
   "pli-tv-kd11:31.1.113": "He should not criticize the procedure. ",
   "pli-tv-kd11:31.1.114": "He should not criticize those who did the procedure. ",
   "pli-tv-kd11:31.1.115": "He should not consent to a regular monk bowing down to him. ",
