Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1236,9 +1236,9 @@
   "pli-tv-kd11:31.1.110": "He shouldn’t commit the same offense as the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
   "pli-tv-kd11:31.1.111": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
   "pli-tv-kd11:31.1.112": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of ejecting him for not making amends for an offense. ",
-  "pli-tv-kd11:31.1.113": "He should not criticize the procedure. ",
-  "pli-tv-kd11:31.1.114": "He should not criticize those who did the procedure. ",
-  "pli-tv-kd11:31.1.115": "He should not consent to a regular monk bowing down to him. ",
+  "pli-tv-kd11:31.1.113": "He shouldn’t criticize the procedure. ",
+  "pli-tv-kd11:31.1.114": "He shouldn’t criticize those who did the procedure. ",
+  "pli-tv-kd11:31.1.115": "He shouldn’t consent to a regular monk bowing down to him. ",
   "pli-tv-kd11:31.1.116": "He should not consent to a regular monk standing up for him. ",
   "pli-tv-kd11:31.1.117": "He should not consent to a regular monk raising his joined palms to him. ",
   "pli-tv-kd11:31.1.118": "He should not consent to a regular monk doing acts of respect toward him. ",
