Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1239,12 +1239,12 @@
   "pli-tv-kd11:31.1.113": "He shouldn’t criticize the procedure. ",
   "pli-tv-kd11:31.1.114": "He shouldn’t criticize those who did the procedure. ",
   "pli-tv-kd11:31.1.115": "He shouldn’t consent to a regular monk bowing down to him. ",
-  "pli-tv-kd11:31.1.116": "He should not consent to a regular monk standing up for him. ",
-  "pli-tv-kd11:31.1.117": "He should not consent to a regular monk raising his joined palms to him. ",
-  "pli-tv-kd11:31.1.118": "He should not consent to a regular monk doing acts of respect toward him. ",
-  "pli-tv-kd11:31.1.119": "He should not consent to a regular monk offering him a seat. ",
-  "pli-tv-kd11:31.1.120": "He should not consent to a regular monk offering him a bed. ",
-  "pli-tv-kd11:31.1.121": "He should not consent to a regular monk offering him water for washing his feet and a foot stool. ",
+  "pli-tv-kd11:31.1.116": "He shouldn’t consent to a regular monk standing up for him. ",
+  "pli-tv-kd11:31.1.117": "He shouldn’t consent to a regular monk raising his joined palms to him. ",
+  "pli-tv-kd11:31.1.118": "He shouldn’t consent to a regular monk doing acts of respect toward him. ",
+  "pli-tv-kd11:31.1.119": "He shouldn’t consent to a regular monk offering him a seat. ",
+  "pli-tv-kd11:31.1.120": "He shouldn’t consent to a regular monk offering him a bed. ",
+  "pli-tv-kd11:31.1.121": "He shouldn’t consent to a regular monk offering him water for washing his feet and a foot stool. ",
   "pli-tv-kd11:31.1.122": "He should not consent to a regular monk offering him a foot scraper. ",
   "pli-tv-kd11:31.1.123": "He should not consent to a regular monk receiving his bowl and robe. ",
   "pli-tv-kd11:31.1.124": "He should not consent to a regular monk massaging his back when bathing. ",
