--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1245,10 +1245,10 @@
   "pli-tv-kd11:31.1.119": "He shouldn’t consent to a regular monk offering him a seat. ",
   "pli-tv-kd11:31.1.120": "He shouldn’t consent to a regular monk offering him a bed. ",
   "pli-tv-kd11:31.1.121": "He shouldn’t consent to a regular monk offering him water for washing his feet and a foot stool. ",
-  "pli-tv-kd11:31.1.122": "He should not consent to a regular monk offering him a foot scraper. ",
-  "pli-tv-kd11:31.1.123": "He should not consent to a regular monk receiving his bowl and robe. ",
-  "pli-tv-kd11:31.1.124": "He should not consent to a regular monk massaging his back when bathing. ",
-  "pli-tv-kd11:31.1.125": "He should not charge a regular monk with failure in morality. ",
+  "pli-tv-kd11:31.1.122": "He shouldn’t consent to a regular monk offering him a foot scraper. ",
+  "pli-tv-kd11:31.1.123": "He shouldn’t consent to a regular monk receiving his bowl and robe. ",
+  "pli-tv-kd11:31.1.124": "He shouldn’t consent to a regular monk massaging his back when bathing. ",
+  "pli-tv-kd11:31.1.125": "He shouldn’t charge a regular monk with failure in morality. ",
   "pli-tv-kd11:31.1.126": "He should not charge a regular monk with failure in conduct. ",
   "pli-tv-kd11:31.1.127": "He should not charge a regular monk with failure in view. ",
   "pli-tv-kd11:31.1.128": "He should not charge a regular monk with failure in livelihood. ",
