--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1249,9 +1249,9 @@
   "pli-tv-kd11:31.1.123": "He shouldn’t consent to a regular monk receiving his bowl and robe. ",
   "pli-tv-kd11:31.1.124": "He shouldn’t consent to a regular monk massaging his back when bathing. ",
   "pli-tv-kd11:31.1.125": "He shouldn’t charge a regular monk with failure in morality. ",
-  "pli-tv-kd11:31.1.126": "He should not charge a regular monk with failure in conduct. ",
-  "pli-tv-kd11:31.1.127": "He should not charge a regular monk with failure in view. ",
-  "pli-tv-kd11:31.1.128": "He should not charge a regular monk with failure in livelihood. ",
+  "pli-tv-kd11:31.1.126": "He shouldn’t charge a regular monk with failure in conduct. ",
+  "pli-tv-kd11:31.1.127": "He shouldn’t charge a regular monk with failure in view. ",
+  "pli-tv-kd11:31.1.128": "He shouldn’t charge a regular monk with failure in livelihood. ",
   "pli-tv-kd11:31.1.129": "He should not cause division between monks. ",
   "pli-tv-kd11:31.1.130": "He should not wear lay clothes. ",
   "pli-tv-kd11:31.1.131": "He should not wear the robes of the monastics of other religions. ",
