--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1254,7 +1254,7 @@
   "pli-tv-kd11:31.1.128": "He shouldn’t charge a regular monk with failure in livelihood. ",
   "pli-tv-kd11:31.1.129": "He shouldn’t cause division between monks. ",
   "pli-tv-kd11:31.1.130": "He shouldn’t wear lay clothes. ",
-  "pli-tv-kd11:31.1.131": "He should not wear the robes of the monastics of other religions. ",
+  "pli-tv-kd11:31.1.131": "He shouldn’t wear the robes of the monastics of other religions. ",
   "pli-tv-kd11:31.1.132": "He should not associate with the monastics of other religions. ",
   "pli-tv-kd11:31.1.133": "He should associate with monks. ",
   "pli-tv-kd11:31.1.134": "He should train in the monks’ training. ",
