--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1255,7 +1255,7 @@
   "pli-tv-kd11:31.1.129": "He shouldn’t cause division between monks. ",
   "pli-tv-kd11:31.1.130": "He shouldn’t wear lay clothes. ",
   "pli-tv-kd11:31.1.131": "He shouldn’t wear the robes of the monastics of other religions. ",
-  "pli-tv-kd11:31.1.132": "He should not associate with the monastics of other religions. ",
+  "pli-tv-kd11:31.1.132": "He shouldn’t associate with the monastics of other religions. ",
   "pli-tv-kd11:31.1.133": "He should associate with monks. ",
   "pli-tv-kd11:31.1.134": "He should train in the monks’ training. ",
   "pli-tv-kd11:31.1.135": "He should not stay in the same room in a monastery as a regular monk. ",
