--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1260,7 +1260,7 @@
   "pli-tv-kd11:31.1.134": "He should train in the monks’ training. ",
   "pli-tv-kd11:31.1.135": "He shouldn’t stay in the same room in a monastery as a regular monk. ",
   "pli-tv-kd11:31.1.136": "He shouldn’t stay in the same room in a non-monastery as a regular monk. ",
-  "pli-tv-kd11:31.1.137": "He should not stay in the same room in a monastery or a non-monastery as a regular monk. ",
+  "pli-tv-kd11:31.1.137": "He shouldn’t stay in the same room in a monastery or a non-monastery as a regular monk. ",
   "pli-tv-kd11:31.1.138": "He should get up from his seat when he sees a regular monk. ",
   "pli-tv-kd11:31.1.139": "He should not dismiss a regular monk, whether inside or outside a dwelling. ",
   "pli-tv-kd11:31.1.140": "He should not cancel the observance-day ceremony of a regular monk. ",
