--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1262,7 +1262,7 @@
   "pli-tv-kd11:31.1.136": "He shouldn’t stay in the same room in a non-monastery as a regular monk. ",
   "pli-tv-kd11:31.1.137": "He shouldn’t stay in the same room in a monastery or a non-monastery as a regular monk. ",
   "pli-tv-kd11:31.1.138": "He should get up from his seat when he sees a regular monk. ",
-  "pli-tv-kd11:31.1.139": "He should not dismiss a regular monk, whether inside or outside a dwelling. ",
+  "pli-tv-kd11:31.1.139": "He shouldn’t dismiss a regular monk, whether inside or outside a dwelling. ",
   "pli-tv-kd11:31.1.140": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:31.1.141": "He should not cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:31.1.142": "He should not speak to a regular monk to initiate a legal process against him. ",
