Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1264,9 +1264,9 @@
   "pli-tv-kd11:31.1.138": "He should get up from his seat when he sees a regular monk. ",
   "pli-tv-kd11:31.1.139": "He shouldn’t dismiss a regular monk, whether inside or outside a dwelling. ",
   "pli-tv-kd11:31.1.140": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
-  "pli-tv-kd11:31.1.141": "He should not cancel the invitation ceremony of a regular monk. ",
-  "pli-tv-kd11:31.1.142": "He should not speak to a regular monk to initiate a legal process against him. ",
-  "pli-tv-kd11:31.1.143": "He should not make accusations against a regular monk. ",
+  "pli-tv-kd11:31.1.141": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
+  "pli-tv-kd11:31.1.142": "He shouldn’t order a regular monk in regard to an offense. ",
+  "pli-tv-kd11:31.1.143": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:31.1.144": "He should not get permission from a regular monk to correct him. ",
   "pli-tv-kd11:31.1.145": "He should not accuse a regular monk of an offense. ",
   "pli-tv-kd11:31.1.146": "He should not remind a regular monk of an offense. ",
