--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1267,7 +1267,7 @@
   "pli-tv-kd11:31.1.141": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:31.1.142": "He shouldn’t order a regular monk in regard to an offense. ",
   "pli-tv-kd11:31.1.143": "He shouldn’t give instructions to a regular monk from a position of authority. ",
-  "pli-tv-kd11:31.1.144": "He should not get permission from a regular monk to correct him. ",
+  "pli-tv-kd11:31.1.144": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:31.1.145": "He should not accuse a regular monk of an offense. ",
   "pli-tv-kd11:31.1.146": "He should not remind a regular monk of an offense. ",
   "pli-tv-kd11:31.1.147": "He should not associate inappropriately with other monks.” ",
