Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1485,8 +1485,8 @@
   "pli-tv-kd11:33.1.62": "He shouldn’t have a novice monk attend on him. ",
   "pli-tv-kd11:33.1.63": "He shouldn’t accept being appointed as an instructor of the nuns. ",
   "pli-tv-kd11:33.1.64": "Even if appointed, he shouldn’t instruct the nuns. ",
-  "pli-tv-kd11:33.1.65": "He should not commit the same offense for which the Sangha did the procedure of ejecting him for not giving up a bad view; ",
-  "pli-tv-kd11:33.1.66": "He should not commit an offense similar to the offense for which the Sangha did the procedure of ejecting him for not giving up a bad view; ",
+  "pli-tv-kd11:33.1.65": "He shouldn’t commit the same offense for which the Sangha did the procedure of ejecting him for not giving up a bad view; ",
+  "pli-tv-kd11:33.1.66": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of ejecting him for not giving up a bad view; ",
   "pli-tv-kd11:33.1.67": "He should not commit an offense worse than the offense for which the Sangha did the procedure of ejecting him for not giving up a bad view; ",
   "pli-tv-kd11:33.1.68": "He should not criticize the procedure. ",
   "pli-tv-kd11:33.1.69.1": "He should not criticize those who did the procedure. ",
