Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1489,10 +1489,10 @@
   "pli-tv-kd11:33.1.66": "He shouldn’t commit an offense similar to the offense for which the Sangha did the procedure of ejecting him for not giving up a bad view; ",
   "pli-tv-kd11:33.1.67": "He shouldn’t commit an offense worse than the offense for which the Sangha did the procedure of ejecting him for not giving up a bad view; ",
   "pli-tv-kd11:33.1.68": "He shouldn’t criticize the procedure. ",
-  "pli-tv-kd11:33.1.69.1": "He should not criticize those who did the procedure. ",
-  "pli-tv-kd11:33.1.69.2": "He should not consent to a regular monk bowing down to him. ",
-  "pli-tv-kd11:33.1.69.3": "He should not consent to a regular monk standing up for him. ",
-  "pli-tv-kd11:33.1.69.4": "He should not consent to a regular monk putting the palms of his hands together for him. ",
+  "pli-tv-kd11:33.1.69.1": "He shouldn’t criticize those who did the procedure. ",
+  "pli-tv-kd11:33.1.69.2": "He shouldn’t consent to a regular monk bowing down to him. ",
+  "pli-tv-kd11:33.1.69.3": "He shouldn’t consent to a regular monk standing up for him. ",
+  "pli-tv-kd11:33.1.69.4": "He shouldn’t consent to a regular monk putting the palms of his hands together for him. ",
   "pli-tv-kd11:33.1.69.5": "He should not consent to a regular monk doing appropriate duties for him. ",
   "pli-tv-kd11:33.1.69.6": "He should not consent to a regular monk offering him a seat. ",
   "pli-tv-kd11:33.1.69.7": "He should not consent to a regular monk offering him a bed. ",
