Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1493,10 +1493,10 @@
   "pli-tv-kd11:33.1.69.2": "He shouldn’t consent to a regular monk bowing down to him. ",
   "pli-tv-kd11:33.1.69.3": "He shouldn’t consent to a regular monk standing up for him. ",
   "pli-tv-kd11:33.1.69.4": "He shouldn’t consent to a regular monk putting the palms of his hands together for him. ",
-  "pli-tv-kd11:33.1.69.5": "He should not consent to a regular monk doing appropriate duties for him. ",
-  "pli-tv-kd11:33.1.69.6": "He should not consent to a regular monk offering him a seat. ",
-  "pli-tv-kd11:33.1.69.7": "He should not consent to a regular monk offering him a bed. ",
-  "pli-tv-kd11:33.1.69.8": "He should not consent to a regular monk offering him water for washing his feet and a foot-stool. ",
+  "pli-tv-kd11:33.1.69.5": "He shouldn’t consent to a regular monk doing appropriate duties for him. ",
+  "pli-tv-kd11:33.1.69.6": "He shouldn’t consent to a regular monk offering him a seat. ",
+  "pli-tv-kd11:33.1.69.7": "He shouldn’t consent to a regular monk offering him a bed. ",
+  "pli-tv-kd11:33.1.69.8": "He shouldn’t consent to a regular monk offering him water for washing his feet and a foot-stool. ",
   "pli-tv-kd11:33.1.69.9": "He should not consent to a regular monk offering him a foot-scraper. ",
   "pli-tv-kd11:33.1.69.10": "He should not consent to a regular monk receiving his bowl and robe. ",
   "pli-tv-kd11:33.1.69.11": "He should not consent to a regular monk massaging his back when bathing. ",
