Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1497,11 +1497,11 @@
   "pli-tv-kd11:33.1.69.6": "He shouldn’t consent to a regular monk offering him a seat. ",
   "pli-tv-kd11:33.1.69.7": "He shouldn’t consent to a regular monk offering him a bed. ",
   "pli-tv-kd11:33.1.69.8": "He shouldn’t consent to a regular monk offering him water for washing his feet and a foot-stool. ",
-  "pli-tv-kd11:33.1.69.9": "He should not consent to a regular monk offering him a foot-scraper. ",
-  "pli-tv-kd11:33.1.69.10": "He should not consent to a regular monk receiving his bowl and robe. ",
-  "pli-tv-kd11:33.1.69.11": "He should not consent to a regular monk massaging his back when bathing. ",
-  "pli-tv-kd11:33.1.69.12": "He should not charge a regular monk with failure in morality. ",
-  "pli-tv-kd11:33.1.69.13": "He should not charge a regular monk with failure in conduct. ",
+  "pli-tv-kd11:33.1.69.9": "He shouldn’t consent to a regular monk offering him a foot-scraper. ",
+  "pli-tv-kd11:33.1.69.10": "He shouldn’t consent to a regular monk receiving his bowl and robe. ",
+  "pli-tv-kd11:33.1.69.11": "He shouldn’t consent to a regular monk massaging his back when bathing. ",
+  "pli-tv-kd11:33.1.69.12": "He shouldn’t charge a regular monk with failure in morality. ",
+  "pli-tv-kd11:33.1.69.13": "He shouldn’t charge a regular monk with failure in conduct. ",
   "pli-tv-kd11:33.1.69.14": "He should not charge a regular monk with failure in view. ",
   "pli-tv-kd11:33.1.69.15": "He should not charge a regular monk with failure in livelihood. ",
   "pli-tv-kd11:33.1.69.16": "He should not cause splits between monks. ",
