Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1502,11 +1502,11 @@
   "pli-tv-kd11:33.1.69.11": "He shouldn’t consent to a regular monk massaging his back when bathing. ",
   "pli-tv-kd11:33.1.69.12": "He shouldn’t charge a regular monk with failure in morality. ",
   "pli-tv-kd11:33.1.69.13": "He shouldn’t charge a regular monk with failure in conduct. ",
-  "pli-tv-kd11:33.1.69.14": "He should not charge a regular monk with failure in view. ",
-  "pli-tv-kd11:33.1.69.15": "He should not charge a regular monk with failure in livelihood. ",
-  "pli-tv-kd11:33.1.69.16": "He should not cause splits between monks. ",
-  "pli-tv-kd11:33.1.69.17": "He should not wear lay clothes. ",
-  "pli-tv-kd11:33.1.69.18": "He should not wear the robes of the monastics of other sects. ",
+  "pli-tv-kd11:33.1.69.14": "He shouldn’t charge a regular monk with failure in view. ",
+  "pli-tv-kd11:33.1.69.15": "He shouldn’t charge a regular monk with failure in livelihood. ",
+  "pli-tv-kd11:33.1.69.16": "He shouldn’t cause splits between monks. ",
+  "pli-tv-kd11:33.1.69.17": "He shouldn’t wear lay clothes. ",
+  "pli-tv-kd11:33.1.69.18": "He shouldn’t wear the robes of the monastics of other sects. ",
   "pli-tv-kd11:33.1.69.19": "He should not associate with the monastics of other sects. ",
   "pli-tv-kd11:33.1.69.20": "He should associate with monks. ",
   "pli-tv-kd11:33.1.69.21": "He should train in the monks’ training. ",
