Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1507,14 +1507,14 @@
   "pli-tv-kd11:33.1.69.16": "He shouldn’t cause splits between monks. ",
   "pli-tv-kd11:33.1.69.17": "He shouldn’t wear lay clothes. ",
   "pli-tv-kd11:33.1.69.18": "He shouldn’t wear the robes of the monastics of other sects. ",
-  "pli-tv-kd11:33.1.69.19": "He should not associate with the monastics of other sects. ",
+  "pli-tv-kd11:33.1.69.19": "He shouldn’t associate with the monastics of other sects. ",
   "pli-tv-kd11:33.1.69.20": "He should associate with monks. ",
   "pli-tv-kd11:33.1.69.21": "He should train in the monks’ training. ",
-  "pli-tv-kd11:33.1.69.22": "He should not stay in the same room in a monastery as a regular monk. ",
-  "pli-tv-kd11:33.1.69.23": "He should not stay in the same room in a non-monastery as a regular monk. ",
-  "pli-tv-kd11:33.1.69.24": "He should not stay in the same room in a monastery or a non-monastery as a regular monk. ",
+  "pli-tv-kd11:33.1.69.22": "He shouldn’t stay in the same room in a monastery as a regular monk. ",
+  "pli-tv-kd11:33.1.69.23": "He shouldn’t stay in the same room in a non-monastery as a regular monk. ",
+  "pli-tv-kd11:33.1.69.24": "He shouldn’t stay in the same room in a monastery or a non-monastery as a regular monk. ",
   "pli-tv-kd11:33.1.69.25": "He should get up from his seat when he sees a regular monk. ",
-  "pli-tv-kd11:33.1.69.26": "He should not dismiss a regular monk, whether inside or outside a dwelling. ",
+  "pli-tv-kd11:33.1.69.26": "He shouldn’t dismiss a regular monk, whether inside or outside a dwelling. ",
   "pli-tv-kd11:33.1.70": "He should not cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:33.1.71": "He should not cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:33.1.72": "He should not speak to a regular monk to initiate a legal process against him. ",
