Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1515,9 +1515,9 @@
   "pli-tv-kd11:33.1.69.24": "He shouldn’t stay in the same room in a monastery or a non-monastery as a regular monk. ",
   "pli-tv-kd11:33.1.69.25": "He should get up from his seat when he sees a regular monk. ",
   "pli-tv-kd11:33.1.69.26": "He shouldn’t dismiss a regular monk, whether inside or outside a dwelling. ",
-  "pli-tv-kd11:33.1.70": "He should not cancel the observance-day ceremony of a regular monk. ",
-  "pli-tv-kd11:33.1.71": "He should not cancel the invitation ceremony of a regular monk. ",
-  "pli-tv-kd11:33.1.72": "He should not speak to a regular monk to initiate a legal process against him. ",
+  "pli-tv-kd11:33.1.70": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
+  "pli-tv-kd11:33.1.71": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
+  "pli-tv-kd11:33.1.72": "He shouldn’t order a regular monk in regard to an offense. ",
   "pli-tv-kd11:33.1.73": "He should not make accusations against a regular monk. ",
   "pli-tv-kd11:33.1.74": "He should not get permission from a regular monk to correct him. ",
   "pli-tv-kd11:33.1.75": "He should not accuse a regular monk of an offense. ",
