Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -1520,9 +1520,9 @@
   "pli-tv-kd11:33.1.72": "He shouldn’t order a regular monk in regard to an offense. ",
   "pli-tv-kd11:33.1.73": "He shouldn’t give instructions to a regular monk from a position of authority. ",
   "pli-tv-kd11:33.1.74": "He shouldn’t get permission from a regular monk to correct him. ",
-  "pli-tv-kd11:33.1.75": "He should not accuse a regular monk of an offense. ",
-  "pli-tv-kd11:33.1.76": "He should not remind a regular monk of an offense. ",
-  "pli-tv-kd11:33.1.77": "He should not associate inappropriately with other monks.” ",
+  "pli-tv-kd11:33.1.75": "He shouldn’t accuse a regular monk of an offense. ",
+  "pli-tv-kd11:33.1.76": "He shouldn’t remind a regular monk of an offense. ",
+  "pli-tv-kd11:33.1.77": "He shouldn’t associate inappropriately with other monks.” ",
   "pli-tv-kd11:33.1.78": "The forty-three kinds of conduct in regard to the legal procedure of ejection for not giving up a bad view are finished. ",
   "pli-tv-kd11:34.1.1": "Soon afterwards the Sangha did a legal procedure of ejecting Ariṭṭha for not giving up a bad view, ",
   "pli-tv-kd11:34.1.2": "prohibiting him from living with the Sangha. ",
